# stereo_slam

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  parse_results.py  stats_report.py
apps/: CMakeLists.txt  kitti_stereo.cpp
configs/: kitti.yaml
include/sslam/: system.hpp
include/sslam/camera/: stereo_camera.hpp
include/sslam/dataset/: kitti_loader.hpp
include/sslam/frontend/: feature_matcher.hpp  orb_extractor.hpp  orb_vocabulary.hpp  stereo_matcher.hpp
include/sslam/loop/: keyframe_database.hpp  loop_closing.hpp  loop_diagnostics.hpp  place_recognizer.hpp
include/sslam/mapping/: local_mapping.hpp  triangulation.hpp
include/sslam/optim/: ba.hpp  full_ba.hpp  g2o_types.hpp  pose_graph.hpp  sim3_opt.hpp  sim3_solver.hpp
include/sslam/tracking/: motion_model.hpp  tracking.hpp
include/sslam/types/: frame.hpp  keyframe.hpp  map.hpp  mappoint.hpp
include/sslam/viewer/: map_viewer.hpp
results/: 07_estimated.txt
scripts/: bench_metrics.py  download_kitti.sh  download_vocab.sh  eval_kitti.sh  plot_trajectories.py  run_benchmarks.sh
src/camera/: stereo_camera.cpp
src/dataset/: kitti_loader.cpp
src/frontend/: feature_matcher.cpp  orb_extractor.cpp  orb_vocabulary.cpp  stereo_matcher.cpp
src/io/: trajectory.cpp
src/loop/: keyframe_database.cpp  loop_closing.cpp  loop_diagnostics.cpp  place_recognizer.cpp
src/mapping/: local_mapping.cpp  triangulation.cpp
src/optim/: ba.cpp  full_ba.cpp  pose_graph.cpp  sim3_opt.cpp  sim3_solver.cpp
src/tracking/: tracking.cpp
src/types/: keyframe.cpp  map.cpp  mappoint.cpp
src/viewer/: map_viewer.cpp
tests/: CMakeLists.txt  test_ba.cpp  test_feature_matcher.cpp  test_keyframe_database.cpp  test_kitti_loader.cpp  test_local_ba.cpp  test_map.cpp  test_orb_extractor.cpp  test_orb_vocabulary.cpp  test_pose_graph.cpp  test_sim3_solver.cpp  test_stereo_matcher.cpp  test_tracking.cpp
